--- a/components/molecule/accordion/src/_settings.scss
+++ b/components/molecule/accordion/src/_settings.scss
@@ -10,8 +10,8 @@ $c-accordion-tab-text: $c-text-base !default;
 $c-accordion-tab-scrollbar-thumb: $c-gray !default;
 $h-accordion-tab-btn: $sz-base * 5 !default;
 $p-accordion-tab-btn: $p-m !default;
-$p-accordion-tab-content: $p-l !default;
-$p-accordion-title: $p-m $p-l !default;
+$p-accordion-tab-content: $p-m !default;
+$p-accordion-title: $p-m !default;
 $ff-molecule-accordion-title: $ff-sans-serif !default;
 $fw-molecule-accordion-title: $fw-regular !default;
 $bxsh-accordion-tab-scrollbar-thumb: 0 0 1px $c-gray-lightest !default;
