fix(components/molecule/drawer): fixed overlay

--- a/components/molecule/drawer/src/styles/index.scss
+++ b/components/molecule/drawer/src/styles/index.scss
@@ -2,7 +2,7 @@ $base-class: '.sui-MoleculeDrawer';
 
 #{$base-class} {
   &-overlay {
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px;
     width: 100%;
