fix(components/molecule/dropdownList): make overflow automatic

--- a/components/molecule/dropdownList/src/styles/index.scss
+++ b/components/molecule/dropdownList/src/styles/index.scss
@@ -5,7 +5,7 @@ $base-class: '.sui-MoleculeDropdownList';
   border-radius: $bdrs-dropdown-list;
   box-sizing: $bxz-dropdown-list;
   margin: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: $p-dropdown-list;
   width: 100%;
 
