feat(components/atom/spinner): add a negative prop to have an alternate overlay color

--- a/components/atom/spinner/src/styles/index.scss
+++ b/components/atom/spinner/src/styles/index.scss
@@ -8,6 +8,10 @@ $base-class: '.sui-AtomSpinner';
     position: absolute;
   }
 
+  &--negative::before {
+    background-color: $bgc-atom-spinner-negative;
+  }
+
   &--noBackground::before {
     background-color: transparent;
   }
