--- a/components/atom/spinner/src/styles/settings.scss
+++ b/components/atom/spinner/src/styles/settings.scss
@@ -1,4 +1,5 @@
 $bgc-atom-spinner: rgba($c-white, 0.6) !default;
+$bgc-atom-spinner-negative: rgba($c-black, 0.6) !default;
 $z-atom-spinner: 1 !default;
 
 %spinner-layer {
