--- a/components/molecule/accordion/src/_settings.scss
+++ b/components/molecule/accordion/src/_settings.scss
@@ -4,18 +4,16 @@ $bdrs-accordion-tab: 0 !default;
 $bdrs-accordion-tab-scrollbar-thumb: $bdrs-l !default;
 $bdw-accordion-tab-scrollbar: $bdw-base !default;
 $bgc-accordion-tab-container: $c-white !default;
-$c-accordion-tab-icon: $c-primary !default;
-$sz-accordion-tab-icon: $sz-icon-s !default;
+$c-accordion-tab-icon: $c-gray-dark-3 !default;
+$sz-accordion-tab-icon: $sz-icon-xs !default;
 $c-accordion-tab-text: $c-text-base !default;
 $c-accordion-tab-scrollbar-thumb: $c-gray !default;
-$h-accordion-tab-btn: 40px !default;
+$h-accordion-tab-btn: $sz-base * 5 !default;
 $p-accordion-tab-btn: $p-m !default;
-$p-accordion-tab-content: $p-l !default;
-$p-accordion-title: $p-m $p-l !default;
+$p-accordion-tab-content: $p-m !default;
+$p-accordion-title: $p-m !default;
 $ff-molecule-accordion-title: $ff-sans-serif !default;
 $fw-molecule-accordion-title: $fw-regular !default;
 $bxsh-accordion-tab-scrollbar-thumb: 0 0 1px $c-gray-lightest !default;
 $trs-accordion-tab-content: max-height 0.25s ease-in-out !default;
-$trs-accordion-tab-title: border-bottom 20ms ease-out !default;
-$trs-close-accordion-tab-title: border-bottom 0 ease-out !default;
 $m-accordion-tab-btn: $m-m !default;
