--- a/components/molecule/accordion/demo/index.scss
+++ b/components/molecule/accordion/demo/index.scss
@@ -1,3 +1,5 @@
+@import '~@s-ui/react-atom-icon/lib/index';
+@import '~@s-ui/react-atom-tag/lib/index';
 @import '../src/index.scss';
 
 .demo-header-custom {
