feat(components/atom/spinner): new version of atom spinner with different overlays and custom childr
BREAKING CHANGES:

add different overlay types, remove nobackground prop, add children prop with injected props from

spinner

--- a/components/atom/spinner/src/styles/index.scss
+++ b/components/atom/spinner/src/styles/index.scss
@@ -8,8 +8,16 @@ $base-class: '.sui-AtomSpinner';
     position: absolute;
   }
 
-  &--noBackground::before {
-    background-color: transparent;
+  &-content {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
   }
 
   &--fullPage {
@@ -26,5 +34,13 @@ $base-class: '.sui-AtomSpinner';
 
   #{&}-loader {
     display: block;
+  }
+
+  @each $name, $type in $atom-spinner-overlay-types {
+    $bgc: map-get($type, bgc);
+
+    &--#{$name}::before {
+      background-color: $bgc;
+    }
   }
 }
