feat(components/atom/spinner): rename delayed prop to isDelayed

--- a/components/atom/spinner/demo/index.scss
+++ b/components/atom/spinner/demo/index.scss
@@ -6,6 +6,7 @@
     font-size: $fz-l;
     font-weight: $fw-bold;
     margin-top: $m-l;
+    text-align: center;
     z-index: 999;
 
     &--dark {
