--- a/components/atom/spinner/src/styles/index.scss
+++ b/components/atom/spinner/src/styles/index.scss
@@ -39,7 +39,7 @@ $base-class: '.sui-AtomSpinner';
   @each $name, $type in $atom-spinner-overlay-types {
     $bgc: map-get($type, bgc);
 
-    &--#{$name}::before {
+    &--#{'' + $name}::before {
       background-color: $bgc;
     }
   }
