feat(components/atom/tag): add customizable padding

--- a/components/atom/tag/src/_settings.scss
+++ b/components/atom/tag/src/_settings.scss
@@ -11,6 +11,8 @@ $p-atom-tag-l: 0 $p-l !default;
 $p-atom-tag-m: 0 $p-l !default;
 $p-atom-tag-s: 0 $p-m !default;
 
+$p-atom-tag-medium-hasIcon-hasClose: $p-atom-tag-m !default;
+
 // outline
 $bc-atom-tag-outline: color-variation($c-gray, 3) !default;
 $bdw-atom-tag-outline: $bdw-s !default;
