feat(components/atom/tag): improve padding for tag

--- a/components/atom/tag/src/_settings.scss
+++ b/components/atom/tag/src/_settings.scss
@@ -11,7 +11,11 @@ $p-atom-tag-l: 0 $p-l !default;
 $p-atom-tag-m: 0 $p-l !default;
 $p-atom-tag-s: 0 $p-m !default;
 
-$p-atom-tag-medium-hasIcon-hasClose: $p-atom-tag-m !default;
+$p-atom-tag-hasIcon-hasClose: (
+  small: $p-atom-tag-s,
+  medium: $p-atom-tag-m,
+  large: $p-atom-tag-l
+) !default;
 
 // outline
 $bc-atom-tag-outline: color-variation($c-gray, 3) !default;
