--- a/components/atom/tag/src/styles/index.scss
+++ b/components/atom/tag/src/styles/index.scss
@@ -122,6 +122,9 @@ $base-class: '.sui-AtomTag';
   &-small {
     height: $h-atom-tag-s;
     padding: $p-atom-tag-s;
+    &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
+      padding: map-get($p-atom-tag-hasIcon-hasClose, 'small');
+    }
 
     & .sui-AtomTag-label {
       line-height: $h-atom-tag-s;
@@ -142,7 +145,7 @@ $base-class: '.sui-AtomTag';
 
   &-medium {
     &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
-      padding: $p-atom-tag-medium-hasIcon-hasClose;
+      padding: map-get($p-atom-tag-hasIcon-hasClose, 'medium');
     }
   }
 
@@ -150,6 +153,9 @@ $base-class: '.sui-AtomTag';
     border-radius: ceil($h-atom-tag-l * 0.5);
     height: $h-atom-tag-l;
     padding: $p-atom-tag-l;
+    &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
+      padding: map-get($p-atom-tag-hasIcon-hasClose, 'large');
+    }
 
     & .sui-AtomTag-label {
       line-height: $h-atom-tag-l;
