fix(components/molecule/accordion): fix accordion styles

--- a/components/molecule/accordion/src/styles/index.scss
+++ b/components/molecule/accordion/src/styles/index.scss
@@ -52,7 +52,7 @@ $base-class-item-panel: '#{$base-class-item}Panel';
     border-width: 0;
   }
   #{$base-class-item-header} {
-    border-bottom-width: $bdw-accordion-item;
+    //border-bottom-width: $bdw-accordion-item;
   }
   #{$base-class-item-panel}[aria-expanded='false'] {
     border-top-width: 0;
@@ -167,7 +167,7 @@ $base-class-item-panel: '#{$base-class-item}Panel';
 #{$base-class-item-header} {
   margin: 0;
   + #{$base-class-item-panel} {
-    margin-top: -$bdw-accordion-item;
+    //margin-top: -$bdw-accordion-item;
   }
 }
 
