--- a/components/molecule/rating/src/styles/settings.scss
+++ b/components/molecule/rating/src/styles/settings.scss
@@ -17,6 +17,7 @@ $bg-molecule-rating-hover: $c-primary-light-5 !default;
 
 $m-molecule-rating-label: 0 0 0 $m-m !default;
 $m-l-molecule-rating-stars: 0 !default;
+$m-l-molecule-small-rating-stars: $m-l-molecule-rating-stars !default;
 $p-molecule-rating-label: $p-m !default;
 $p-molecule-rating-stars: 0 !default;
 
