--- a/components/molecule/photoUploader/src/styles/settings.scss
+++ b/components/molecule/photoUploader/src/styles/settings.scss
@@ -46,6 +46,7 @@ $p-photo-uploader: $p-m !default;
 $s-photo-uploader-thumb-icons: 16px !default;
 $w-photo-uploader-thumb-image-desktop: 160px !default;
 $w-photo-uploader-thumb-image: 100% !default;
+$p-photo-uploader-initial-state: 0 !default;
 
 $mih-photo-uploader: 249px !default;
 $s-photo-uploader-counter: 16px !default;
