feat(components/atom/tag): Allow setting bdc from tag types

--- a/components/atom/tag/src/styles/index.scss
+++ b/components/atom/tag/src/styles/index.scss
@@ -199,6 +199,7 @@ $base-class: '.sui-AtomTag';
 
     &--#{$name} {
       background-color: $bgc;
+      border-color: $bdc;
       border-style: $bds;
       border-width: $bdw;
       color: $c;
