--- a/components/atom/checkbox/src/styles/settings.scss
+++ b/components/atom/checkbox/src/styles/settings.scss
@@ -4,6 +4,7 @@ $h-atom-checkbox-small: $sz-icon-s !default;
 $w-atom-checkbox-small: $sz-icon-s !default;
 $h-atom-checkbox: $sz-icon-m !default;
 $w-atom-checkbox: $sz-icon-m !default;
+
 $h-atom-checkbox-icon: $sz-icon-s !default;
 $w-atom-checkbox-icon: $sz-icon-s !default;
 
@@ -17,14 +18,14 @@ $m-atom-checkbox-type-right: $m-m !default;
 
 $bgc-atom-checkbox: $c-white !default;
 $bgc-checked-atom-checkbox: $c-primary !default;
-$bd-atom-checkbox: $bdw-s solid $c-gray !default;
+$bd-atom-checkbox: $bdw-s solid $c-primary !default;
 $bd-atom-checkbox--checked: $bdw-s solid $c-primary !default;
 $bd-atom-checkbox-is-intermediate: $bd-atom-checkbox--checked !default;
 
-$bdc-atom-checkbox-is-disabled: color-variation($c-gray, 1) !default;
-$bgc-checked-atom-checkbox-is-disabled: color-variation($c-gray, 3) !default;
+$bdc-atom-checkbox-is-disabled: $c-gray-light-1 !default;
+$bgc-checked-atom-checkbox-is-disabled: $c-gray-light-3 !default;
 $bgc-checked-atom-checkbox-is-intermediate: $bgc-checked-atom-checkbox !default;
-$c-atom-checkbox-is-disabled: color-variation($c-gray, -2) !default;
+$c-atom-checkbox-is-disabled: $c-gray-dark-2 !default;
 $c-atom-checkbox-custom-is-disabled: $c-atom-checkbox-is-disabled;
 $c-atom-checkbox-is-intermediate: $c-atom-checkbox !default;
 
@@ -34,3 +35,14 @@ $c-atom-checkbox--alert: $c-alert !default;
 
 $status-atom-checkbox: success $c-atom-checkbox--success,
   error $c-atom-checkbox--error, alert $c-atom-checkbox--alert !default;
+
+$sz-icon: (
+  small: (
+    height: $h-atom-checkbox-small,
+    width: $w-atom-checkbox-small
+  ),
+  medium: (
+    height: $h-atom-checkbox,
+    width: $w-atom-checkbox
+  )
+);
