feat(components/atom/icon): polymorphism style reset

--- a/components/atom/icon/src/styles/index.scss
+++ b/components/atom/icon/src/styles/index.scss
@@ -7,6 +7,10 @@ $base-class: '.sui-AtomIcon';
   width: auto;
   overflow: visible;
   background: transparent;
+  color: inherit;
+  &:focus-visible {
+    outline-width: 0;
+  }
 
   // Colors
   @each $key, $value in $atom-icon-colors {
