feat(components/atom/label): allow customization for AtomLabel line-height

--- a/components/atom/label/src/styles/index.scss
+++ b/components/atom/label/src/styles/index.scss
@@ -5,6 +5,7 @@ $base-class: '.sui-AtomLabel';
   color: $c-atom-label;
   font-size: $fz-atom-label;
   font-weight: $fw-atom-label;
+  line-height: $lh-atom-label;
 
   &-optionalText {
     color: $c-atom-label-optional;
