--- a/components/atom/label/src/styles/settings.scss
+++ b/components/atom/label/src/styles/settings.scss
@@ -6,3 +6,4 @@ $fw-atom-label: inherit !default;
 $c-atom-label-type: success $c-success, error $c-error, alert $c-alert,
   contrast $c-atom-label-contrast, disabled $c-atom-label-disabled !default;
 $fz-atom-label: $fz-base !default;
+$lh-atom-label: 1 !default;
