--- a/components/molecule/badgeCounter/src/styles/index.scss
+++ b/components/molecule/badgeCounter/src/styles/index.scss
@@ -4,6 +4,10 @@ $base-class: '.sui-MoleculeBadgeCounter';
   display: inline-block;
   position: relative;
 
+  &--withChildren {
+    height: 100%;
+  }
+
   &-bullet {
     $bullet: &;
     align-items: center;
@@ -44,7 +48,7 @@ $base-class: '.sui-MoleculeBadgeCounter';
       height: $molecule-badge-counter-small-diameter;
       width: $molecule-badge-counter-small-diameter;
 
-      .sui-MoleculeBadgeCounter--withChildren & {
+      &.sui-MoleculeBadgeCounter-bullet--withChildren {
         position: absolute;
         right: $molecule-badge-counter-small-offset-right;
         top: $molecule-badge-counter-small-offset-top;
@@ -60,7 +64,7 @@ $base-class: '.sui-MoleculeBadgeCounter';
       height: $molecule-badge-counter-medium-diameter;
       min-width: $molecule-badge-counter-medium-diameter;
 
-      .sui-MoleculeBadgeCounter--withChildren & {
+      &.sui-MoleculeBadgeCounter-bullet--withChildren {
         position: absolute;
         right: $molecule-badge-counter-medium-offset-right;
         top: $molecule-badge-counter-medium-offset-top;
@@ -87,7 +91,7 @@ $base-class: '.sui-MoleculeBadgeCounter';
       height: $molecule-badge-counter-large-diameter;
       min-width: $molecule-badge-counter-large-diameter;
 
-      .sui-MoleculeBadgeCounter--withChildren & {
+      &.sui-MoleculeBadgeCounter-bullet--withChildren {
         position: absolute;
         right: $molecule-badge-counter-large-offset-right;
         top: $molecule-badge-counter-large-offset-top;
