--- a/components/atom/slider/src/styles/settings.scss
+++ b/components/atom/slider/src/styles/settings.scss
@@ -15,6 +15,8 @@ $mb-atom-slider-label: $m-m !default;
 $trf-atom-slider-label: translateX(-50%) !default;
 $c-atom-slider-label: $c-system !default;
 $w-atom-slider-handle: 24px !default;
+$b-atom-slider-handle: $bdw-s solid $c-primary !default;
+$bxsh-atom-slider-handle: none !default;
 
 $h-atom-slider-track: 8px !default;
 $p-atom-slider: $p-l !default;
