feat(components/atom/input): Add readonly styles with a specific class

--- a/components/atom/input/src/Input/Component/index.scss
+++ b/components/atom/input/src/Input/Component/index.scss
@@ -18,6 +18,12 @@ $class-read-only: '#{$base-class-input}--readOnly';
     display: none;
   }
 
+  &--readOnly {
+    background: $bgc-atom-input-read-only;
+    border: $bd-atom-input-read-only;
+    color: $c-atom-input-read-only;
+  }
+
   @include atom-input-shape-wrapper(
     $base-class,
     $base-class-input,
