--- a/components/atom/input/src/Input/Component/settings.scss
+++ b/components/atom/input/src/Input/Component/settings.scss
@@ -25,3 +25,7 @@ $sizes-atom-input: xl $h-atom-input--xl, l $h-atom-input--l, m $h-atom-input--m,
   xs $h-atom-input--xs, s $h-atom-input--s !default;
 $states-atom-input: success $c-atom-input--success, error $c-atom-input--error,
   alert $c-atom-input--alert !default;
+
+$bgc-atom-input-read-only: $bgc-atom-input !default;
+$c-atom-input-read-only: $c-atom-input !default;
+$bd-atom-input-read-only: $bd-atom-input-base !default;
