feat(components/atom/button): minor changes

--- a/components/atom/button/src/styles/index.scss
+++ b/components/atom/button/src/styles/index.scss
@@ -259,7 +259,7 @@ $base-class: '.sui-AtomButton';
   }
 
   &:focus {
-    box-shadow: $bxsh-atom-butto-focus;
+    box-shadow: $bxsh-atom-button-focus;
   }
 
   &--squared {
