feat(components/atom/button): fix typo

--- a/components/atom/button/src/styles/settings.scss
+++ b/components/atom/button/src/styles/settings.scss
@@ -103,7 +103,7 @@ $bxsh-atom-button: (
   large: $bxsh-l,
   medium: $bxsh-m
 ) !default;
-$bxsh-atom-buttom-focus: none !default;
+$bxsh-atom-button-focus: none !default;
 
 $tt-atom-button: none !default;
 
